--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -33,3 +33,12 @@ label {
 .bg-dark1{
   background-color:rgb(000,104,139);
 }
+.btncolor1{
+  color:#f7f7f7;
+  text-decoration: none;
+}
+
+
+/* a {
+  color: #fff;
+} */
